syntax = "proto3";

package kessel.inventory.v1beta1.resources;

import "google/api/annotations.proto";
import "buf/validate/validate.proto";

import "kessel/inventory/v1beta1/resources/resource.proto";

option go_package = "github.com/project-kessel/inventory-api/api/kessel/inventory/v1beta1/resources";
option java_multiple_files = true;
option java_package = "org.project_kessel.api.inventory.v1beta1.resources";

message GetResourceByResourceIdRequest {
  uint64 resource_id = 1 [(buf.validate.field).required = true];
}

message GetResourceByResourceIdResponse {
  Resource resource = 1 [(buf.validate.field).required = true];
}


service ResourceQueryService {
  rpc GetResourceByResourceId(GetResourceByResourceIdRequest) returns (GetResourceByResourceIdResponse) {
    option (google.api.http) = {
      get : "/api/inventory/v1beta1/resources/{resource_id}"
      body : "*"
    };
  };
}
